# pico-rv32ima

./: .gitmodules  CMakeLists.txt
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
build2/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
build2/no-OS-FatFS-SD-SPI-RPi-Pico/src/: Makefile  cmake_install.cmake
build2/pico-displayDrivs/: Makefile  cmake_install.cmake
build2/pico-displayDrivs/gfx/: Makefile  cmake_install.cmake
build2/pico-displayDrivs/ili9341/: Makefile  cmake_install.cmake
build2/pico-displayDrivs/st7735/: Makefile  cmake_install.cmake
build2/pico-displayDrivs/st7789/: Makefile  cmake_install.cmake
build2/pico-ps2Driv/: Makefile  cmake_install.cmake
build2/pico-rv32ima/: Makefile  cmake_install.cmake  pico-rv32ima.dis  pico-rv32ima.elf  pico-rv32ima.elf.map  pico-rv32ima.hex  pico-rv32ima.uf2
build2/pico-rv32ima/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
build2/pico-sdk/: Makefile  cmake_install.cmake
build2/pico-sdk/docs/: Makefile  cmake_install.cmake
build2/pico-sdk/src/: Makefile  cmake_install.cmake
build2/pico-sdk/src/common/: Makefile  cmake_install.cmake
build2/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
build2/pico-sdk/tools/: Makefile  cmake_install.cmake
build2/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
linux/c4/: c4  c4.gdb
pico-rv32ima/: CMakeLists.txt  console.c  emulator.c  main.c  psram.c  rv32_config.h  sd_hw_config.c  sdram.c
(+152 files in other folders)
